# basic_bitcoin

./: canister_ids.json  dfx.json
scripts/: generate_candid.sh
src/basic_bitcoin/: Cargo.toml  basic_bitcoin2.did
src/basic_bitcoin/src/: lib.rs
