[package]
name = "basic_bitcoin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
bitcoin = "0.30.2"
serde = "1.0.132"
ic-cdk = "0.16.0"
ic-cdk-macros = "0.16.0"
candid = "0.10.10"
